--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -1,7 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>Game Accessibility Resources</title>
@@ -10,19 +8,29 @@
 </head>
 
 <body>
-  <div id="header">
+  <header>
     <h1><span class="h1txt">Game Accessibility Resources</span></h1>
-    <!--ul class="nav">
-      <li><a href="MobileAccessibilityResources.html" title="Mobile Accessibility">Mobile</a></li>
-      <li><a href="GameAccessibilityResources.html" title="Game Accessibility">Games</a></li>
-      <li><a href="LinuxAccessibilityResources.html" title="Linux Accessibility">Linux</a></li>
-      <li><a href="GUIAccessibilityResources.html" title="GUI Toolkit Accessibility"><abbr title="graphical user interface">GUI</abbr> Toolkits</a></li>
-      <li><a href="WebAppAccessibilityResources.html" title="Web Application Accessibility">Web Applications</a></li>
-      <li><a href="WebAccessibilityTools.html" title="Web Accessibility Tools">Tools</a></li>
-    </ul-->
-  </div><!-- end #header -->
+  </header>
 
-  <div id="main">
+  <nav>
+    <h2>Navigation</h2>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="WebAppAccessibilityResources.html">Web Applications</a></li>
+      <li><a href="WebAccessibilityTools.html">Web Accessibility Tools</a></li>
+      <li><a href="elearning.html">Accessibility in e-Learning</a></li>
+      <li><a href="contentmanagement.html">Content Management Systems</a></li>
+      <li><a href="MobileAccessibilityResources.html">Mobile Accessibility</a></li>
+      <li><a href="LinuxAccessibilityResources.html">Linux Accessibility</a></li>
+      <li><a href="GUIAccessibilityResources.html"><abbr>GUI</abbr> Toolkit Accessibility</a></li>
+      <li><a href="accessibilityguidelines.html">Accessibility Guidelines </a></li>
+      <li class="active"><a href="GameAccessibilityResources.html">Game Accessibility</a></li>
+      <li><a href="crowdsourcing.html">Crowdsourcing &amp; Human-Based Computation</a></li>
+      <li><a href="assistivetechnology.html">Assistive Technology</a></li>
+    </ul>
+  </nav>
+
+  <main>
     <h2>Guidelines and Organisations</h2>
     <ul>
       <li><strong><a href="http://igda-gasig.org/"><abbr
@@ -196,9 +204,9 @@
       </li>
     </ul>
 
-  </div><!-- end #main -->
+  </main>
 
-  <div id="footer">
+  <footer>
     <p id="licence"><a rel="license"
     href="http://creativecommons.org/licenses/by-sa/4.0/"><img
     alt="Creative Commons License Attribution-ShareAlike" style="border-width:0"
@@ -215,6 +223,6 @@
     
     <p>You can <a href="https://github.com/cstrobbe/AccessibilityResources">fork
     the code</a> on GitHub.</p>
-  </div><!-- end #footer -->
+  </footer>
 </body>
 </html>
