--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
- "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB">
+<!DOCTYPE html>
+<html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>Accessibility Resources</title>
@@ -12,55 +10,46 @@
 </head>
 
 <body id="home">
-  <div id="header">
+  <header>
     <h1><span class="h1txt">Accessibility Resources</span></h1>
-  </div><!-- end #header -->
+  </header>
 
-  <div id="main">
+  <main>
     <h2>Web</h2>
     <ul>
-      <li><a href="WebAppAccessibilityResources.html">Web 
-        Application Accessibility Resources</a>.
+      <li><a href="WebAppAccessibilityResources.html">Web Application Accessibility Resources</a>.
       </li>
-      <li><a href="WebAccessibilityTools.html">Web 
-        Accessibility Tools</a>.
+      <li><a href="WebAccessibilityTools.html">Web Accessibility Tools</a>.
       </li>
-      <li><a href="elearning.html">Accessibility 
-        in e-Learning</a>.
+      <li><a href="elearning.html">Accessibility in e-Learning</a>.
       </li>
-      <li><a href="contentmanagement.html">Content 
-        Management Systems (<abbr>CMS</abbr>)</a>.
+      <li><a href="contentmanagement.html">Content Management Systems (<abbr>CMS</abbr>)</a>.
       </li>
     </ul>
 
     <h2>Mobile</h2>
     <ul>
-      <li><a href="MobileAccessibilityResources.html">Mobile Accessibility
-        Resources</a>.
+      <li><a href="MobileAccessibilityResources.html">Mobile Accessibility Resources</a>.
       </li>
     </ul>
 
     <h2>Desktop</h2>
     <ul>
-      <li><a href="LinuxAccessibilityResources.html">Linux Accessibility
-        Resources</a>.
+      <li><a href="LinuxAccessibilityResources.html">Linux Accessibility Resources</a>.
       </li>
       <li><a href="GUIAccessibilityResources.html">
-        <abbr title="graphical user interface">GUI</abbr>
-        Toolkit Accessibility Resources</a>.
+        <abbr title="graphical user interface">GUI</abbr> Toolkit Accessibility Resources</a>.
       </li>
     </ul>
 
     <h2>Other</h2>
     <ul>
-      <li><a href="accessibilityguidelines.html">Accessibility Guidelines</a>
+      <li><a href="accessibilityguidelines.html">Accessibility Guidelines</a>.
       </li>
-      <li><a href="GameAccessibilityResources.html">Game Accessibility
-        Resources</a>.
+      <li><a href="GameAccessibilityResources.html">Game Accessibility Resources</a>.
       </li>
       <li>
-        <a href="crowdsourcing.html">Accessibility, Crowdsourcing 
-        and Human-Based Computation</a>.
+        <a href="crowdsourcing.html">Accessibility, Crowdsourcing and Human-Based Computation</a>.
       </li>
       <li>
         <a href="assistivetechnology.html">Assistive Technology</a>,
@@ -78,9 +67,9 @@
       <!-- Searches mostly W3C and the eAccessPlus wiki, which seems to be down. -->
     </p>
 
-  </div><!-- end #main -->
+  </main>
 
-  <div id="footer">
+  <footer>
     <p id="licence">
     <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
     <img alt="Creative Commons License Attribution-ShareAlike" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" />
@@ -97,6 +86,6 @@
     
     <p>You can <a href="https://github.com/cstrobbe/AccessibilityResources">fork
     the code</a> on GitHub.</p>
-  </div><!-- end #footer -->
+  </footer>
 </body>
 </html>
