--- a/GUIAccessibilityResources.html
+++ b/GUIAccessibilityResources.html
@@ -1,7 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>GUI Toolkit Accessibility Resources</title>
@@ -10,11 +8,29 @@
 </head>
 
 <body>
-  <div id="header">
+  <header>
     <h1><span class="h1txt"><abbr title="graphical user interface">GUI</abbr> Toolkit Accessibility Resources</span></h1>
-  </div><!-- end #header -->
+  </header>
 
-  <div id="main">
+  <nav>
+    <h2>Navigation</h2>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="WebAppAccessibilityResources.html">Web Applications</a></li>
+      <li><a href="WebAccessibilityTools.html">Web Accessibility Tools</a></li>
+      <li><a href="elearning.html">Accessibility in e-Learning</a></li>
+      <li><a href="contentmanagement.html">Content Management Systems</a></li>
+      <li><a href="MobileAccessibilityResources.html">Mobile Accessibility</a></li>
+      <li><a href="LinuxAccessibilityResources.html">Linux Accessibility</a></li>
+      <li class="active"><a href="GUIAccessibilityResources.html"><abbr>GUI</abbr> Toolkit Accessibility</a></li>
+      <li><a href="accessibilityguidelines.html">Accessibility Guidelines </a></li>
+      <li><a href="GameAccessibilityResources.html">Game Accessibility</a></li>
+      <li><a href="crowdsourcing.html">Crowdsourcing &amp; Human-Based Computation</a></li>
+      <li><a href="assistivetechnology.html">Assistive Technology</a></li>
+    </ul>
+  </nav>
+
+  <main>
     <h2>Java Swing</h2>
       <ul>
         <li><a href="http://docs.oracle.com/javase/7/docs/api/javax/accessibility/package-summary.html">
@@ -86,9 +102,9 @@
       "<a href="https://www.wxwidgets.org/docs/tutorials/accessibility/">Accessibility in wxWidgets</a>" 
       (February 2003).
     </p>
-  </div><!-- end #main -->
+  </main>
 
-  <div id="footer">
+  <footer>
     <p id="licence"><a rel="license"
     href="http://creativecommons.org/licenses/by-sa/4.0/"><img
     alt="Creative Commons License Attribution-ShareAlike" style="border-width:0"
@@ -105,6 +121,6 @@
     
     <p>You can <a href="https://github.com/cstrobbe/AccessibilityResources">fork
     the code</a> on GitHub.</p>
-  </div><!-- end #footer -->
+  </footer>
 </body>
 </html>
