--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -1,20 +1,36 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>Linux Accessibility Resources</title>
-  <link rel="stylesheet" type="text/css" media="screen" href="css/stuttgartbib.css" title="default" />
-  <link rel="stylesheet" type="text/css" media="screen" href="css/verdemoderna.css" title="alternative stylesheet (green)" />
+  <link rel="stylesheet" type="text/css" media="screen" href="./css/stuttgartbib.css" title="default" />
+  <link rel="stylesheet" type="text/css" media="screen" href="./css/verdemoderna.css" title="alternative stylesheet (green)" />
 </head>
 
 <body>
-  <div id="header">
+  <header>
     <h1><span class="h1txt">Linux Accessibility Resources</span></h1>
-  </div><!-- end #header -->
+  </header>
 
-  <div id="main">
+  <nav>
+    <h2>Navigation</h2>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="WebAppAccessibilityResources.html">Web Applications</a></li>
+      <li><a href="WebAccessibilityTools.html">Web Accessibility Tools</a></li>
+      <li><a href="elearning.html">Accessibility in e-Learning</a></li>
+      <li><a href="contentmanagement.html">Content Management Systems</a></li>
+      <li><a href="MobileAccessibilityResources.html">Mobile Accessibility</a></li>
+      <li class="active"><a href="LinuxAccessibilityResources.html">Linux Accessibility</a></li>
+      <li><a href="GUIAccessibilityResources.html"><abbr>GUI</abbr> Toolkit Accessibility</a></li>
+      <li><a href="accessibilityguidelines.html">Accessibility Guidelines </a></li>
+      <li><a href="GameAccessibilityResources.html">Game Accessibility</a></li>
+      <li><a href="crowdsourcing.html">Crowdsourcing &amp; Human-Based Computation</a></li>
+      <li><a href="assistivetechnology.html">Assistive Technology</a></li>
+    </ul>
+  </nav>
+
+  <main>
     <h2>General Linux Accessibility Resources</h2>
     <ul>
       <li>Sharon Snider: 
@@ -194,9 +210,9 @@
         However, it has not been updated since 2006 or 2007.
       </li>
     </ul>
-  </div><!-- end #main -->
+  </main>
 
-  <div id="footer">
+  <footer>
     <p id="licence"><a rel="license"
     href="http://creativecommons.org/licenses/by-sa/4.0/"><img
     alt="Creative Commons License Attribution-ShareAlike" style="border-width:0"
@@ -213,6 +229,6 @@
     
     <p>You can <a href="https://github.com/cstrobbe/AccessibilityResources">fork
     the code</a> on GitHub.</p>
-  </div><!-- end #footer -->
+  </footer>
 </body>
 </html>
