--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
         especially toolkits and platforms for developing 
         <abbr class="assistive technology">AT</abbr>.
       </li>
+      <li><a href="tts.html">Text-to-speech software</a>.
+      </li>
     </ul>
     <p>
       The website of the European project 
