FOSS vs free TTSs engines.

--- a/tts.html
+++ b/tts.html
@@ -32,7 +32,7 @@
   </nav>
 
   <main>
-    <!--h2>Open-source text-to-speech software</h2-->
+    <h2>Open-source text-to-speech software</h2>
     <ul>
       <li><a href="http://espeak.sourceforge.net/">eSpeak</a>:
         a speech synthesiser for Linux and Windows that supports 
@@ -46,17 +46,6 @@
         <a href="http://www.cstr.ed.ac.uk/projects/festival/download.html">download page</a> contains
         the full C++ source code, voice for British and American English, documentation and a few other things.
         <br />Licence: X11-type licence.
-      </li>
-      <li><a href="http://tcts.fpms.ac.be/synthesis/mbrola/">The MBROLA Project</a>:
-        <q>a speech synthesizer based on the concatenation of diphones</q>.
-        The system supports many languages, including French, British Englis, American Englis, 
-        German, Spanish, Portuguese and Japanese.
-        The <a href="http://tcts.fpms.ac.be/synthesis/mbrola/">download page</a> gives 
-        access to mandatory download (the MBROLA binary and voices) and
-        several optional downloads.
-        The binary is available for many operating systems; the source code is not available for download.
-        <br />Licence: <a href="http://tcts.fpms.ac.be/synthesis/mbrola/">MBROLA licence</a>,
-        which does not allow that it be used for commercial or military purposes.
       </li>
       <li><a href="http://freetts.sourceforge.net/docs/index.php">FreeTTS 1.2</a>:
         &ldquo;a speech synthesizer written entirely in the Java&trade; programming language&rdquo;.
@@ -121,6 +110,12 @@
         See also <a href="https://github.com/praat/praat">Praat's GitHub repository</a>.
         <br />Licence: <a href="http://www.fon.hum.uva.nl/praat/GNU_General_Public_License.txt"><abbr>GNU</abbr> <abbr>GPL</abbr> 2 (1991)</a>.
       </li>
+    </ul>
+
+    <p>The following projects have not yet reached beta status or have been inactive
+      for at least three years.
+    </p>
+    <ul>
       <li>A <a href="https://github.com/sweemer/tts"><abbr>TTS</abbr> program</a>
         for Japanese, Korean, Chinese and English written in C#,
         with no updates since February 2012 (<abbr>i.e.</abbr> probably abandoned).
@@ -154,6 +149,23 @@
       </li>
     </ul>
 
+    <h2>Free text-to-speech software</h2>
+    <p>Thef following text-to-speech engines and programs are free but not available
+      under an open source licence.
+    </p>
+    <ul>
+      <li><a href="http://tcts.fpms.ac.be/synthesis/mbrola/">The MBROLA Project</a>:
+        <q>a speech synthesizer based on the concatenation of diphones</q>.
+        The system supports many languages, including French, British Englis, American Englis, 
+        German, Spanish, Portuguese and Japanese.
+        The <a href="http://tcts.fpms.ac.be/synthesis/mbrola/">download page</a> gives 
+        access to mandatory download (the MBROLA binary and voices) and
+        several optional downloads.
+        The binary is available for many operating systems; the source code is not available for download.
+        <br />Licence: <a href="http://tcts.fpms.ac.be/synthesis/mbrola/">MBROLA licence</a>,
+        which does not allow that it be used for commercial or military purposes.
+      </li>
+    </ul>
 
   </main>
 
