More web app a11y resources.

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -68,6 +68,10 @@
         Notes on Using <abbr>ARIA</abbr> in <abbr title="Hypertext Markup Language">HTML</abbr></a>:
         a practical guide for developers (under development).
       </li>
+      <li>
+        <a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/An_overview_of_accessible_web_applications_and_widgets">An overview of accessible web applications and widgets</a>,
+        <i>Mozilla Developer Network (<abbr>MDN</abbr>)</i> (resource under development).
+      </li>
     </ul>
 
     <h2>Standards and References</h2>
@@ -103,6 +107,14 @@
         You can contribute to this resource by making pull requests to 
         <a href="https://github.com/stevefaulkner/HTML5accessibility">
         Steve Faulkner's GitHub repository</a>.
+      </li>
+    </ul>
+
+    <h2>Other Useful Resources</h2>
+    <ul>
+      <li>Heydon Pickering:
+        <a class="booktitle" href="https://store.kobobooks.com/en-US/ebook/apps-for-all-coding-accessible-web-applications">Apps For All: Coding Accessible Web Applications</a>,
+        e-book published by Kobo (2014).
       </li>
     </ul>
 
