IDs added to headings.

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -39,7 +39,8 @@
     </p>
     <p><strong>Note</strong>: most <abbr>WCAG</abbr> success criteria cannot be evaluated automatically.
     </p>
-    <h2>Lists of Tools</h2>
+
+    <h2 id="toollists">Lists of Tools</h2>
     <ul>
       <li>The <strong><a href="http://www.w3.org/WAI/ER/tools/">Web Accessibility 
         Evaluation Tools List</a></strong>
@@ -80,7 +81,7 @@
     </ul>
 
     <h2>Individual Tools</h2>
-    <h3>Code Checkers</h3>
+    <h3 id="codecheckers">Code Checkers</h3>
     <ul>
       <li>
         <a href="https://github.com/yargalot/grunt-accessibility">Grunt Accessibility</a>,
@@ -167,7 +168,7 @@
       </li-->
     </ul>
 
-    <h3>Contrast Checkers</h3>
+    <h3 id="contrastcheck">Contrast Checkers</h3>
     <p>Whether foreground and background colous have sufficient contrast is not 
       something that you should try to &ldquo;eyeball&rdquo;. For example,
       red and green are strongly contrastly contrasting colour for people with
@@ -322,7 +323,7 @@
       </li>
     </ul>
 
-    <h2>Developing Browser Extensions</h2>
+    <h2 id="ua_extensiondev">Developing Browser Extensions</h2>
     <ul>
       <li>
         <a href="https://www.youtube.com/watch?v=6dfrfRl6il8">Google Chrome Extensions and Accessibility</a>
@@ -342,7 +343,7 @@
       </li>
     </ul>
 
-    <h2>Browser Extensions for End Users</h2>
+    <h2 id="ua_extensionuser">Browser Extensions for End Users</h2>
     <ul>
       <li><a href="http://chronic-illness-support.tumblr.com/post/121510449113/chrome-extensions-for-disabilities-masterpost">chrome extensions for disabilities masterpost</a>
         (June 2015): a list of extensions for people with reading disabilities.
