Personas page added to site navigation.

--- a/MobileAccessibilityResources.html
+++ b/MobileAccessibilityResources.html
@@ -16,6 +16,7 @@
     <h2>Navigation</h2>
     <ul>
       <li><a href="index.html">Home</a></li>
+      <li><a href="personas.html">Personas</a></li>
       <li><a href="WebAppAccessibilityResources.html">Web Applications</a></li>
       <li><a href="WebAccessibilityTools.html">Web Accessibility Tools</a></li>
       <li><a href="elearning.html">Accessibility in e-Learning</a></li>
@@ -156,6 +157,14 @@
       <li><a href="http://www.apps4android.org/"><strong>Apps4Android</strong></a>,
         Not Just For Profit (<abbr>NJFP</abbr>) corporation, developer Android
         accessibility applications.</li>
+      <li>Phil Weaver, Eve Andersson, Casey Burkhardt, Hugh Oh, Mark Riccobono:
+        <a href="https://www.youtube.com/watch?v=euEsfNR5Zw4">Improve Your Android App's Accessibility</a>,
+        talk from Google I/O 2015.
+      </li>
+      <li>Casey Burkhardt, T. V. Raman, Alan Viverette:
+        <a href="https://www.youtube.com/watch?v=ld7kZRpMGb8">Enabling Blind and Low-Vision Accessibility On Android</a>,
+        a presentation from Google I/O 2013.
+      </li>
       <li><a href="http://www.apps4android.org/?cat=30">Apps4Android: Category
         &ldquo;Accessibility Guidelines&rdquo;</a>.</li>
       <li><a href="https://www.youtube.com/watch?v=q3HliaMjL38">Google I/O 2012 -
