--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -16,6 +16,7 @@
     <h2>Navigation</h2>
     <ul>
       <li><a href="index.html">Home</a></li>
+      <li><a href="personas.html">Personas</a></li>
       <li><a href="WebAppAccessibilityResources.html">Web Applications</a></li>
       <li class="active"><a href="WebAccessibilityTools.html">Web Accessibility Tools</a></li>
       <li><a href="elearning.html">Accessibility in e-Learning</a></li>
