--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
     <h2>Other</h2>
     <ul>
+      <li><a href="personas.html">Personas</a>.
+      </li>
       <li><a href="accessibilityguidelines.html">Accessibility Guidelines</a>.
       </li>
       <li><a href="GameAccessibilityResources.html">Game Accessibility Resources</a>.
@@ -69,6 +71,9 @@
       <!-- Searches mostly W3C and the eAccessPlus wiki, which seems to be down. -->
     </p>
 
+    <!-- Unsorted: 
+      * Noun Project: https://thenounproject.com/about/ 
+    -->
   </main>
 
   <footer>
