--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -16,6 +16,7 @@
     <h2>Navigation</h2>
     <ul>
       <li><a href="index.html">Home</a></li>
+      <li><a href="personas.html">Personas</a></li>
       <li class="active"><a href="WebAppAccessibilityResources.html">Web Applications</a></li>
       <li><a href="WebAccessibilityTools.html">Web Accessibility Tools</a></li>
       <li><a href="elearning.html">Accessibility in e-Learning</a></li>
@@ -117,6 +118,28 @@
         e-book published by Kobo (2014).
       </li>
     </ul>
+    <!-- CSS layouts & accessibility?
+      * CSS flexbox @ HTML5 Please: http://html5please.com/#flexbox 
+        * Chris Coyier: "A Complete Guide to Flexbox", CSS-Tricks, 3 November 2015: https://css-tricks.com/snippets/css/a-guide-to-flexbox/ 
+        * Greg Smith: "Dive into Flexbox", bocoup, 13 December 2012: https://bocoup.com/weblog/dive-into-flexbox 
+        * "Using CSS flexible boxes", Mozilla Developer Network: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Using_CSS_flexible_boxes 
+      * Jeremy Keith: "Strong Layout Systems by Eric Meyer", 18 February 2013: http://adactio.com/journal/6049 
+      * Stephen Hay: articles in the category "layout": http://www.the-haystack.com/category/layout/ 
+      * Trent Walton: "Flexible Foundations", 7 January 2013: http://trentwalton.com/2013/01/07/flexible-foundations/ 
+      * Jonathan Avila: "What Does Responsive Web Design Have to do with Accessibility?", SSB BART Group, 11 July 2013: http://www.ssbbartgroup.com/blog/what-does-responsive-web-design-have-to-do-with-accessibility/ 
+      * Alastair Campbell: "Browser zoom great for accessibility", 4 August 2013: https://alastairc.ac/2013/08/browser-zoom-great-for-accessibility/ 
+      * Kathy Wahlbin: "Accessible Responsive Web Design", 7 November 2013: http://www.slideshare.net/kwahlbin/accessible-responsive-web-design 
+      * Alastair Campbell: "CSUN: Responsive design and accessible design", 19 March 2014: https://alastairc.ac/2014/03/csun-responsive-design-and-accessible-design/ 
+      * Alastair Campbell: "CSUN: Browser zoom sucks for low vision users", 20 March 2014: https://alastairc.ac/2014/03/csun-browser-zoom-sucks-for-low-vision-users/ 
+      * Nathan Ford: "Content-out Layout", A List Apart N° 392, 25 March 2014: http://alistapart.com/article/content-out-layout 
+      * Alastair Campbell: "Zoom for fixed and responsive sites", 8 October 2015: https://alastairc.ac/2015/10/zoom-for-fixed-and-responsive-sites/ 
+      * W3C: CSS Flexible Box Layout Module Level 1 - W3C Last Call Working Draft 14 May 2015: https://www.w3.org/TR/2015/WD-css-flexbox-1-20150514/ 
+    -->
+
+    <!-- Responsive web design in general (no discussion of accessibility):
+      * Ben Frain: Responsive Web Design with HTML5 and CSS3 - Second Edition. Packt Publishing, August 2015: https://www.packtpub.com/web-development/responsive-web-design-html5-and-css3-second-edition 
+      
+    -->
 
     <h2>Examples (Widgets, etc.)</h2>
     <ul>
