Armfield: How accessible is WP? (Feb 2016)

--- a/contentmanagement.html
+++ b/contentmanagement.html
@@ -395,6 +395,10 @@
         <a href="https://github.com/joedolson/access-monitor/blob/master/gpl.txt"><abbr>GNU</abbr> 
         <abbr lang="en-US" title="General Public License">GPL</abbr> version 3</a>.
       </li>
+      <li>Graham Armfield
+        <a href="http://www.headstar.com/eablive/?p=1113">Special report: How accessible is WordPress?</a>,
+        23 February 2016.
+      </li>
       <li>Sami Keijonen:
         <a href="https://poststatus.com/how-to-create-accessible-wordpress-themes/">How
         to create better, more accessible WordPress themes</a>, 13 May 2015.
