NDA: Meet the Normals.
NDA: Meet the Normals - Adventures in Universal Design (YT)

--- a/personas.html
+++ b/personas.html
@@ -69,6 +69,18 @@
         at the
         University of Cambridge.
       </li>
+      <li>National Disability Authority:
+        <a href="https://www.youtube.com/watch?v=A88E4DH2asQ">Meet The Normals - Adventures in Universal Design</a>
+        (YouTube, 7 minutes):
+        this video introduces a family &mdash;&nbsp;the Normals&nbsp;&mdash;
+        and the accessibility issues they encounter in daily life. 
+        The second half of the video explains how universal design can accomodate
+        the diverse needs of the family members.
+        The video was created by the
+        <a href="http://nda.ie/">National Disability Authority (<abbr>NDA</abbr>)</a> in Ireland;
+        the <abbr>NDA</abbr> also maintains the website
+        <a href="http://universaldesign.ie/">Centre for Excellence in Universal Design</a>.
+      </li>
       <li>Shawn Lawton Henry:
         <a href="http://www.uiaccess.com/accessucd/personas_eg.html">Example Personas</a>,
         from the book <i class="booktitle">Just Ask: Integrating Accessibility Throughout Design</i> (2007).
