Stories similar to personas.

--- a/personas.html
+++ b/personas.html
@@ -69,18 +69,6 @@
         at the
         University of Cambridge.
       </li>
-      <li>National Disability Authority:
-        <a href="https://www.youtube.com/watch?v=A88E4DH2asQ">Meet The Normals - Adventures in Universal Design</a>
-        (YouTube, 7 minutes):
-        this video introduces a family &mdash;&nbsp;the Normals&nbsp;&mdash;
-        and the accessibility issues they encounter in daily life. 
-        The second half of the video explains how universal design can accomodate
-        the diverse needs of the family members.
-        The video was created by the
-        <a href="http://nda.ie/">National Disability Authority (<abbr>NDA</abbr>)</a> in Ireland;
-        the <abbr>NDA</abbr> also maintains the website
-        <a href="http://universaldesign.ie/">Centre for Excellence in Universal Design</a>.
-      </li>
       <li>Shawn Lawton Henry:
         <a href="http://www.uiaccess.com/accessucd/personas_eg.html">Example Personas</a>,
         from the book <i class="booktitle">Just Ask: Integrating Accessibility Throughout Design</i> (2007).
@@ -142,6 +130,30 @@
       </li>
     </ul>
 
+    <h2>Stories Similar to Personas</h2>
+    <p>Projects sometimes develop stories that are similar to personas but that are not based on formal user research.
+    </p>
+    <ul>
+      <li>National Disability Authority:
+        <a href="https://www.youtube.com/watch?v=A88E4DH2asQ">Meet The Normals - Adventures in Universal Design</a>
+        (YouTube, 7 minutes):
+        this video introduces a family &mdash;&nbsp;the Normals&nbsp;&mdash;
+        and the accessibility issues they encounter in daily life. 
+        (The descriptions are not necessarily based on the kind of formal user research that is required for personas.)
+        The second half of the video explains how universal design can accomodate
+        the diverse needs of the family members.
+        The video was created by the
+        <a href="http://nda.ie/">National Disability Authority (<abbr>NDA</abbr>)</a> in Ireland;
+        the <abbr>NDA</abbr> also maintains the website
+        <a href="http://universaldesign.ie/">Centre for Excellence in Universal Design</a>.
+      </li>
+      <li><abbr title="massive open online course">MOOC</abbr> Accessibility Partnership:
+        <a href="http://gpii.eu/moocap/?page_id=33"><abbr>MOOCA</abbr> project day-in-the-life stories</a>.
+        These stories were developed in 2015 as background information for a
+        <abbr>MOOC</abbr> on acccessibility in <abbr>ICT</abbr>.
+      </li>
+    </ul>
+
   </main>
 
   <footer>
@@ -158,7 +170,7 @@
     xml:lang="en-US" lang="en-US" rel="license"
     href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
     Attribution-ShareAlike 4.0 International License</a>. </p>
-    
+
     <p>You can <a href="https://github.com/cstrobbe/AccessibilityResources">fork
     the code</a> on GitHub.</p>
   </footer>
