+ W3C Accessible Online Learning Community Group.

--- a/elearning.html
+++ b/elearning.html
@@ -52,8 +52,17 @@
       </li>
     </ul>
 
-    <h2>Pojects</h2>
+    <h2>Pojects and Initiatives</h2>
     <ul>
+      <li>
+        <a href="https://www.w3.org/community/accesslearn/">Accessible Online Learning Community Group</a>
+        at the <abbr title="World Wide Web Consortium">W3C</abbr>.
+        From the group's description:
+        <blockquote><p>The activities of the Accessible Online Learning <abbr>W3C</abbr> Community Group take place at the intersection of 
+          accessibility and online learning. We focus on reviewing current <abbr>W3C</abbr> resources and technologies to ensure the requirements for accessible online learning experiences are considered. We also identify areas where additional resources and technologies are needed 
+          to ensure full participation of people with disabilities in online learning experiences.
+        </p></blockquote>
+      </li>
       <li><a href="http://aldoproject.eu/">The <abbr>ALDO</abbr> Project</a>:
         <abbr>ALDO</abbr> stands for &ldquo;Adults with a Learning Disability, 
         Observatory of Best Practise&rdquo;.
