RGAA on GitHub & in English.

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -114,6 +114,11 @@
         lang="fr">Référentiel Général d'Accessibilité pour les Administrations 
         (<abbr>RGAA</abbr>)</a>: version 3 of the accessibility guidelines
         for public authorities in France.
+        <br />
+        The guidelines are also avaiable in Markdown format on GitHub:
+        <a href="https://github.com/DISIC/rgaa_referentiel" lang="fr"><abbr>RGAA</abbr> Référentiel</a>.
+        An English translation is available in the GitHub repository
+        <a href="https://github.com/DISIC/rgaa_referentiel_en"><abbr>RGAA</abbr> Guidelines</a>.
       </li>
       <li>United Nations: 
         <a href="http://www.un.org/webaccessibility/index.shtml">
