Minor edit: formatting.

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -36,48 +36,41 @@
     <h2>General Linux Accessibility Resources</h2>
     <ul>
       <li>Sharon Snider: 
-        <strong><a href="http://www.tldp.org/HOWTO/Accessibility-Dev-HOWTO/">How 
-        to Develop Accessible Linux Applications</a></strong> (<abbr>IBM</abbr>, 2002).
+        <strong><a href="http://www.tldp.org/HOWTO/Accessibility-Dev-HOWTO/">How to Develop Accessible Linux Applications</a></strong> 
+        (<abbr>IBM</abbr>, 2002).
         Also available on <a href="http://www.faqs.org/docs/Linux-HOWTO/Accessibility-Dev-HOWTO.html">faqs.org</a>.
       </li>
-      <li><span lang="fr">Samuel Thibault</span>: <a
-        href="http://brl.thefreecat.org/wiki/LUG">Accessibility Tips: 
-          <abbr title="Linux User Group">LUG</abbr>
-        </a>
+      <li><span lang="fr">Samuel Thibault</span>: 
+        <a href="http://brl.thefreecat.org/wiki/LUG">Accessibility Tips: <abbr title="Linux User Group">LUG</abbr></a>
         for Linux User Groups who want to welcome people with disabilities.
       </li>
-      <li><span lang="fr">Samuel Thibault</span>: <a
-        href="http://brl.thefreecat.org/wiki/Installer">Accessibility Tips: Installer</a>: 
+      <li><span lang="fr">Samuel Thibault</span>: 
+        <a href="http://brl.thefreecat.org/wiki/Installer">Accessibility Tips: Installer</a>: 
         about accessible installers.
       </li>
       <li>Spencer Hunley: 
-        <a href="http://opensource.com/life/15/4/6-reasons-people-disabilities-should-use-linux">
-        6 reasons people with disabilities should use Linux</a>,
+        <a href="http://opensource.com/life/15/4/6-reasons-people-disabilities-should-use-linux">6 reasons people with disabilities should use Linux</a>,
         Opensource.com, 20 April 2015.
       </li>
-      <li>Kendell Clark: <a href="http://opensource.com/life/15/5/accessibility-linux">
-        Accessibility in Linux is good (but could be much better)</a>,
+      <li>Kendell Clark: 
+        <a href="http://opensource.com/life/15/5/accessibility-linux">Accessibility in Linux is good (but could be much better)</a>,
         Opensource.com, 4 May 2015.
       </li>
       <li>
-        <a href="http://listengine.tuxfamily.org/lists.tuxfamily.org/carrefourblinux/"
-        lang="fr">Carrefour Blinux</a>: French mailing list about Linux and 
-        accessibility.
+        <a href="http://listengine.tuxfamily.org/lists.tuxfamily.org/carrefourblinux/" lang="fr">Carrefour Blinux</a>: 
+        French mailing list about Linux and accessibility.
       </li>
     </ul>
 
     <h2>Desktop Environments</h2>
     <ul>
       <li>The GNOME Project: <strong>
-        <a href="https://developer.gnome.org/accessibility-devel-guide/">GNOME 
-        Accessibility Developers Guide</a></strong>.
+        <a href="https://developer.gnome.org/accessibility-devel-guide/">GNOME Accessibility Developers Guide</a></strong>.
         See also the
-        <a href="https://wiki.gnome.org/Accessibility/IntroATs">Introduction
-        to Assistive Technologies</a>.
+        <a href="https://wiki.gnome.org/Accessibility/IntroATs">Introduction to Assistive Technologies</a>.
       </li>
       <li><a href="http://mate-desktop.org/">MATE Desktop Environment</a>. 
-        <a href="https://en.wikipedia.org/wiki/MATE_%28software%29"
-        title="MATE on Wikipedia">MATE</a> 
+        <a href="https://en.wikipedia.org/wiki/MATE_%28software%29" title="MATE on Wikipedia">MATE</a> 
         is a fork of the now unmaintained GNOME 2. 
         When the GNOME Project released GNOME 3, much of the accessibility work had to be redone.
         For this reason, many people with disabilities continued using GNOME 2 and,
@@ -98,8 +91,7 @@
         <a href="https://ubuntu-mate.org/">Ubuntu Mate</a>,
         <a href="https://www.archlinux.org/">Arch Linux</a>
         (see its 
-        <a href="https://wiki.archlinux.org/index.php/Desktop_environment">wikipage
-        about desktop environments</a>),
+        <a href="https://wiki.archlinux.org/index.php/Desktop_environment">wikipage about desktop environments</a>),
         <a href="https://www.debian.org/">Debian</a>
         (you need to select the desktop you want during the installation process),
         <a href="http://mageia.org/">Mageia</a>
@@ -121,8 +113,8 @@
     <h3>Desktop Environments: Information and Tips for Computer Users</h3>
     <ul>
       <li>GNOME:
-        <a href="https://help.gnome.org/users/gnome-help/stable/a11y.html">Universal
-        Access</a>: guide to GNOME's accessibility features.
+        <a href="https://help.gnome.org/users/gnome-help/stable/a11y.html">Universal Access</a>: 
+        guide to GNOME's accessibility features.
       </li>
       <li>KDE UserBase Wiki:
         <a href="https://userbase.kde.org/Applications/Accessibility">Accessibility</a>:
@@ -144,8 +136,8 @@
         is an easy-to-use, talking desktop system with optional support for braille, 
         which can be used entirely without vision oriented output devices.</q>
       </li>
-      <li><a href="https://wiki.archlinux.org/index.php/TalkingArch">
-        TalkingArch</a>: 
+      <li>
+        <a href="https://wiki.archlinux.org/index.php/TalkingArch">TalkingArch</a>: 
         TalkingArch is a bootable CD or USB image optimised for blind users. 
         The system stars speaking at boot time.
         TalkingArch is not an official release of the Arch Linux project.
@@ -154,8 +146,7 @@
         a Debian-based French distribution aimed at beginners, elderly people 
         and anyone who needs simplicity. 
         Version 2, which was released on 
-        <a href="http://blog.handylinux.org/article190/handylinux-2-0-est-disponible-au-telechargement">
-        16 May 2015</a>,
+        <a href="http://blog.handylinux.org/article190/handylinux-2-0-est-disponible-au-telechargement">16 May 2015</a>,
         is based on Debian 8, although it is only available as a 32-bit version. 
         It uses <a href="http://www.xfce.org/">Xfce</a> as desktop environment
         and includes the <a href="https://wiki.gnome.org/Projects/Orca">Orca screen reader</a> 
@@ -166,8 +157,7 @@
         <a href="http://wiki.handylinux.org/doku.php/en/access">Accessibility Tools</a>
         page for more information about the included assistive technologies. 
         See the
-        <a href="http://wiki.xfce.org/releng/4.10/roadmap/accessibility">Accessibility 
-        in Xfce Core 4.10 Roadmap</a>
+        <a href="http://wiki.xfce.org/releng/4.10/roadmap/accessibility">Accessibility in Xfce Core 4.10 Roadmap</a>
         for more information about accessibility in Xfce. 
         (Version 4.10 is no longer the most recent version.)
         <br />
@@ -175,10 +165,9 @@
         was released on 23 May 2015.
         (Note: the installation procedure might not be easy enough for beginners.)
       </li>
-      <li><a href="http://www.linux-speakup.org/projects.html">
-        The SpeakUp Project</a> &amp;
-        <a href="http://www.linux-speakup.org/speakup.html">
-        SpeakUp</a>: 
+      <li>
+        <a href="http://www.linux-speakup.org/projects.html">The SpeakUp Project</a> &amp;
+        <a href="http://www.linux-speakup.org/speakup.html">SpeakUp</a>: 
         <q cite="http://www.linux-speakup.org/projects.html">a screen review 
         package for the Linux operating system</q>.
         SpeakUp is available for Debian, Fedora and a few other
@@ -202,8 +191,8 @@
         (by Thomas Gras, 20 June 2015).
       </li>
       <li>
-        <a href="http://cd.oralux.net/index.php?mylang=en">Oralux</a> is (or was)
-        a Linux distribution for visually impaired persons. 
+        <a href="http://cd.oralux.net/index.php?mylang=en">Oralux</a>
+        is (or was) a Linux distribution for visually impaired persons. 
         It was based on 
         <a href="http://www.knopper.net/knoppix/index-en.html">Knoppix</a> 
         and included BRLTTY, Emacspeak, Yasr, 
