Sonar 2016.03 released (Manjaro).

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -126,6 +126,14 @@
     <ul>
       <li><a href="http://sonargnulinux.com/">Sonar <abbr>GNU</abbr>/Linux</a>:
         a Linux distribution that focuses on assistive technologies.
+        <br />Sonar 2016.03 is part of the 
+        <a href="https://manjaro.github.io/about/">Manjaro</a> build system.
+        It has versions with GNOME and versions with Mate.
+        See 
+        <a href="http://sonargnulinux.com/sonar-2016-3-is-out/">Sonar 2016.3 is out!</a> 
+        on the Sonar blog and
+        <a href="https://manjaro.github.io/Sonar-16.03-released/">Sonar 2016.03 released - an accessible OS focused on assistive technology</a> 
+        on the Manjaro website.
       </li>
       <li><a href="http://vinuxproject.org/">Vinux</a>:
         a Linux distribution based on Ubuntu that is optimised for the needs of blind and partially sighted users.
