Web a11y MOOC by CCCS: next session.

--- a/elearning.html
+++ b/elearning.html
@@ -172,7 +172,8 @@
       <li>
         <a href="https://www.canvas.net/browse/cccs/courses/web-accessibility-mooc-for-educators-3">Web Accessibility <abbr>MOOC</abbr> for Educators</a>
         is a three-week course by the Colorado Community College System (<abbr>CCCS</abbr>) hosted on Canvas.
-        It most recently ran in February-March 2016.
+        It most recently ran in February-March 2016 and is scheduled to run again 
+        <a href="https://www.canvas.net/browse/cccs/courses/web-accessibility-mooc-for-educators-4">from 18 April to 8 May 2016</a>. 
       </li>
       <li>
         <a href="https://www.canvas.net/browse/empirestate/empirestate-buffalostate/courses/accessibility-designing-teaching">Accessibility: Designing and Teaching Courses for All Learners</a>
