h2@id: IMS Global.

--- a/elearning.html
+++ b/elearning.html
@@ -38,7 +38,7 @@
     ATutor: Accessibility Features: http://www.atutor.ca/atutor/docs/atutor_access.php
     Moodle: @@
   -->
-    <h2><abbr>IMS</abbr> Global Learning Consortium</h2>
+    <h2 id="ims"><abbr>IMS</abbr> Global Learning Consortium</h2>
     <ul>
       <li><a href="http://www.imsglobal.org/accessibility/">Accessibility
         Specifications</a>: homepage of the <abbr>IMS</abbr> Accessibility
