--- a/elearning.html
+++ b/elearning.html
@@ -94,6 +94,15 @@
         <a href="https://github.com/dslab-epfl/accessibility-checker/blob/master/COPYING.txt"><abbr>GNU</abbr> 
         <abbr lang="en-US" title="General Public License">GPL</abbr> version 3</a>. 
       </li>
+      <li>
+        <a href="https://github.com/ucfcdl/UDOIT">Universal Design Online content Inspection Tool (<abbr>UDOIT</abbr>)</a>:
+        source code of a tool that
+        <q>enables faculty to identify accessibility issues in Canvas by Instructure. 
+        It will scan a course, generate a report, and provide resources on how to address common accessibility issues.</q>
+        The tool is being developed by the 
+        <a href="https://online.ucf.edu/about/" lang="en-US">Center for Distributed Learning</a>
+        at the University of Central Florida.
+      </li>
     </ul>
 
     <h2>Articles on Accessibility and Online Learning</h2>
