--- a/elearning.html
+++ b/elearning.html
@@ -195,6 +195,12 @@
       </li>
     </ul>
 
+    <h2>Document Accessibility</h2>
+    <p>Note: this section will probably move to a separate page.</p>
+    <ul>Microsoft in Government:
+      <a href="https://www.youtube.com/playlist?list=PLY_z_-LKXnjmEHGI8ku6L94KCr4zXvF6J">Creating Accessible Documents</a>:
+      YouTube playlist consisting of 10 short videos.
+    </ul>
   </main>
 
   <footer>
