Document accessibility: ADOD.

--- a/elearning.html
+++ b/elearning.html
@@ -197,9 +197,24 @@
 
     <h2>Document Accessibility</h2>
     <p>Note: this section will probably move to a separate page.</p>
-    <ul>Microsoft in Government:
-      <a href="https://www.youtube.com/playlist?list=PLY_z_-LKXnjmEHGI8ku6L94KCr4zXvF6J">Creating Accessible Documents</a>:
-      YouTube playlist consisting of 10 short videos.
+    <ul>
+      <li>Accessible Digital Office Document (<abbr>ADOD</abbr>) Project:
+        <a href="http://adod.idrc.ocad.ca/">Accessibility of Office Documents and Office Applications</a>:
+        website with authoring techniques for Microsoft Word, Google Docs, iWork Pages, LibreOffice Writer,
+        Microsoft Excel, OpenOffice Calc, Microsoft PowerPoint, OpenOffice Impress
+        and several other applications.
+      </li>
+      <li>Microsoft in Government:
+        <a href="https://www.youtube.com/playlist?list=PLY_z_-LKXnjmEHGI8ku6L94KCr4zXvF6J">Creating Accessible Documents</a>:
+        YouTube playlist consisting of 10 short videos.
+        The videos cover the following topics: document naming, headings and styles, lists,
+        columns, tables, languages, links, alt text, and joining the accessibility community.
+        <br />See also 
+        <a href="https://www.microsoft.com/enable/products/office2010/default.aspx">Accessibility in Microsoft Office 2010</a>
+        and
+        <a href="https://www.microsoft.com/enable/products/office2013/default.aspx">Accessibility in Microsoft Office 2013</a>
+        on the Microsoft Accessibility website.
+      </li>
     </ul>
   </main>
 
