+ Metzessible PDF/UA Series (YT).

--- a/elearning.html
+++ b/elearning.html
@@ -215,6 +215,13 @@
         <a href="https://www.microsoft.com/enable/products/office2013/default.aspx">Accessibility in Microsoft Office 2013</a>
         on the Microsoft Accessibility website.
       </li>
+      <li>
+        <a href="https://www.youtube.com/playlist?list=PLmfVOnJxeSEXsEKv2i20nYMHYuFEcl4fO">Metzessible <abbr title="Portable Document Format: Universal Accessibility">PDF/UA</abbr> Series</a>:
+        YouTube playlist about accessible <abbr>PDF</abbr>.
+        <a href="https://en.wikipedia.org/wiki/PDF/UA"><abbr>PDF/UA</abbr></a>
+        is the informal name for
+        <a href="http://www.iso.org/iso/iso_catalogue/catalogue_tc/catalogue_detail.htm?csnumber=64599">ISO 14289</a>.
+      </li>
     </ul>
   </main>
 
