--- a/elearning.html
+++ b/elearning.html
@@ -204,6 +204,13 @@
         Microsoft Excel, OpenOffice Calc, Microsoft PowerPoint, OpenOffice Impress
         and several other applications.
       </li>
+      <li>Acceded <abbr>PDF</abbr> Project:
+        <a href="http://www.pdf-accessible.com/en/">Accessibility of <abbr>PDF</abbr></a>
+        (English translation of
+        <a href="http://www.pdf-accessible.com/" lang="fr">Accessibilité des documents <abbr>PDF</abbr> et ePub</a>).
+        <br />Guidelines for making <abbr>PDF</abbr> documents accessibile with Adobe InDesign;
+        you can even download a practice document.
+      </li>
       <li>Microsoft in Government:
         <a href="https://www.youtube.com/playlist?list=PLY_z_-LKXnjmEHGI8ku6L94KCr4zXvF6J">Creating Accessible Documents</a>:
         YouTube playlist consisting of 10 short videos.
